--- a/templates/sales/_product_detail_modal.html
+++ b/templates/sales/_product_detail_modal.html
@@ -7,7 +7,7 @@
             <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2 z-10">✕</button>
         </form>
         
-        <div class="bg-base-200 p-12 flex items-center justify-center h-80">
+        <div class="bg-white p-12 flex items-center justify-center h-80">
             <div class="w-full h-full flex items-center justify-center">
                 {% if product.image %}
                     <img 
